fix alignment in tradeinfo

--- a/src/components/Trade/TradeForm/TradeInfo/TradeInfo.scss
+++ b/src/components/Trade/TradeForm/TradeInfo/TradeInfo.scss
@@ -30,6 +30,7 @@
     .data-piece {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       &__label {
         color: #bdccd4;
         font-weight: 700;
